--- a/component/src/pages/basic/basic.html
+++ b/component/src/pages/basic/basic.html
@@ -6,3 +6,5 @@
 <p (click)="showMessege()">Click me</p>
 <button (click)="show()">Timer</button>
 <p>{{liveDate}} </p>
+
+<button onclick="showMe()">Hello World</button>
