--- a/component/src/pages/basic/basic.html
+++ b/component/src/pages/basic/basic.html
@@ -1,5 +1,5 @@
 <h3>This is Child Component</h3>
-
+<h1>This Is From h1 tag Basic Component</h1>
 <p>Name : {{name}}</p>
 <p>Marks : {{marks}} </p>
 
